--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <yan-map (coordinateChanged)="setCoordinates($event)" [removeInitPoint]="removeInitPoint">
+                        <yan-map (coordinateChanged)="setCoordinates($event)" [removeInitPoint]="removeInitPoint" [mode]="mode">
                         </yan-map>
                     </div>
                 </div>
