--- a/MyProjects/SightMap/src/app/show/detail/detail.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/detail.component.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="col">
                         <yan-map (coordinateChanged)="setCoordinates($event)" [switchEditMode]="switchEditMode"
-                            [initPoint]="getInitPoint()"></yan-map>
+                            [initPoint]="getInitPoint()" [mode]="mode"></yan-map>
                     </div>
                 </div>
 
