--- a/MyProjects/SightMap/src/app/show/show.component.html
+++ b/MyProjects/SightMap/src/app/show/show.component.html
@@ -1,10 +1,16 @@
 <div class="col">
-    <filter-comp (onApplyFilter)="getSights($event)" *ngIf="!useMap"></filter-comp>
+    <filter-comp (onApplyFilter)="getDataFromCommonFilter($event)" *ngIf="useCommonFilter"></filter-comp>
 
     <div class="row">
         <div class="col">
-            <mapfilter-comp (onApplyFilter)="getSights($event)" *ngIf="useMap" [acceptorSights]="sightsReady"></mapfilter-comp>
+            <mapfilter-comp (onApplyFilter)="getDataFromMap($event)" *ngIf="useMapFilter" 
+                [acceptorSights]="sightsReady" ></mapfilter-comp>
         </div>
+    </div>
+
+    <div>
+        <input type="checkbox" [(ngModel)]="useCommonFilter"><span>Фильтр</span>
+        <input type="checkbox" [(ngModel)]="useMapFilter"><span>Карта</span>
     </div>
     <table class="table table-stripped table-hover">
         <thead>
